# simpleMath

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
benchmark/: CMakeLists.txt  add.cpp  pow.cpp
cmake/: avx_utils.cmake  gbenchmark.cmake  gtest.cmake
docs/: exp.md
include/: SMArray.h  SMUtils.h  Slice.h  UserFunctions.h  helpers.h  macros.h  sm.h
include/math/: add.h  calculate.h  division.h  exp.h  helpers.h  log.h  multiply.h  pow.h  product.h  subtract.h
include/math/simd/: crafted_exp.h  crafted_log.h  crafted_pow.h  utils.h
scripts/: pow.py
simpleMath/: CMakeLists.txt  SMArray.cpp
simpleMath/include/: SMArray.h  SMUtils.h  sm.h
simpleMath/include/math/: add.h  minus.h  substract.h
tests/: CMakeLists.txt  add.cpp  division.cpp  exp.cpp  log.cpp  multiply.cpp  pow.cpp  subtract.cpp
